corrected text align in detail header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -211,7 +211,8 @@ footer img{
   }
   .detail_header{
     max-width: none;
-    width: 100%
+    width: 100%;
+    text-align: center;
   }
   .detail span {
     font-size: .77rem;
